# highload

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  generate.sh
custom-templates/: Cargo.mustache
db-config/: init-master.sh  init-replica.sh  init.sql
http/: add_friend.http  create_post.http  feed.http  get_user.http  login.http  register.http  update_post.http  (+1 more)
messenger/: .env  .gitignore  Cargo.toml  docker-compose.yml  generate.sh  generate_templates.sh  run_citus_2_workers.sh  run_citus_8_workers.sh
messenger/db-config/: init.sql
messenger/http/: dialog_list.http  login.http  send_dialog_message.http
messenger/init/: init-in-memory-db.lua
messenger/init/migrations/: V1__ddl_create_dialogs_table.sql
messenger/load-testing/: Performance comparison.ods  Performance comparison.xlsx  Test_Plan.jmx  statistics_db.json  statistics_inmem.json  user_ids.csv
messenger/openapi/: openapi.json
messenger/src/: app_state.rs  application.rs  main.rs  migrations.rs
messenger/src/modules/: mod.rs
messenger/src/modules/auth/: auth.rs
messenger/src/modules/common/: mod.rs
messenger/src/modules/common/tarantool/: mod.rs  tarantool_manager.rs
messenger/src/modules/dialog/: controller.rs  domain_models.rs  init.rs  mod.rs  repository.rs  service.rs  service_provider.rs
messenger/src/modules/dialog/tarantool/: repository.rs
messenger/src/modules/mock/: service.rs
social/: .env  Cargo.toml  docker-compose.yml  generate_clients.sh
social/clients/messenger/: Cargo.toml  README.md
social/clients/messenger/.openapi-generator/: FILES
social/clients/messenger/docs/: DialogApi.md  DialogMessage.md  DialogUserIdSendPost500Response.md  DialogUserIdSendPostRequest.md
social/clients/messenger/src/apis/: configuration.rs  dialog_api.rs  mod.rs
social/clients/messenger/src/models/: _dialog__user_id__send_post_500_response.rs  _dialog__user_id__send_post_request.rs  dialog_message.rs  mod.rs
social/custom-templates/: Cargo.mustache
social/db-config/: failover.sh  init-master.sh  init-replica.sh  init.sql  pool_passwd
social/http/: add_friend.http  create_post.http  delete_post.http  dialog_list.http  get_post.http  login.http  send_dialog_message.http
social/load-testing/: Feed.jmx
social/load-testing/stage2/: ReadAPI.jmx  Write.jmx
social/migrations/: V2__ddl_create_friends_table.sql  V6__ddl_create_dialogs_table.sql
social/openapi/: asyncapi.json  openapi.json
social/openapi/messenger/: openapi.json
social/src/: app_state.rs  application.rs  load_metric_utils.rs  main.rs  middleware.rs  migrations.rs
social/src/modules/: mod.rs
social/src/modules/auth/: auth.rs  controller.rs
social/src/modules/common/: mod.rs
social/src/modules/common/ext/: extensions.rs
social/src/modules/common/ws/: ws_manager.rs
social/src/modules/dialog/: controller.rs  mod.rs  models.rs  service.rs  service_provider.rs
social/src/modules/friend/: controller.rs  friend_service.rs  mod.rs  repository.rs
social/src/modules/post/: async_handler.rs  async_notifier.rs  cached_post_service.rs  caching_listener.rs  controller.rs  event.rs  followers_service.rs  mod.rs  model.rs  post_cache.rs  post_service.rs  publishing_service.rs  rabbitmq.rs  repository.rs  service_provider.rs
social/src/modules/post/followers/: async_handler.rs  async_notifier.rs  caching_listener.rs  follower_event_bus.rs  followers_service.rs  mod.rs  service_provider.rs
social/ui/: index.html  index1.html  index2.html
(+55 files in other folders)
