[package]
name = "highload"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "api"  
]
resolver = "2"

[dependencies]
openapi = { path = "api" }
axum = "0.8.6"
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
sqlx = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
async-trait = "0.1.89"
axum-extra = { version = "0.10", features = ["cookie", "query"] }
chrono = "0.4.42"
