[package]
name = "highload"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "api"  
]
resolver = "2"

[dependencies]
openapi = { path = "api" }
axum = "0.8.6"
deadpool-postgres = "0.14.1"
dotenv = "0.14.1"
env_logger = "0.11.8"
log = "0.4.28"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
sqlx = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-uuid-1"] } 
async-trait = "0.1.89"
axum-extra = { version = "0.10", features = ["cookie", "query"] }
chrono = "0.4.42"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.9.2"
rand_core = "0.9.3"
uuid = { version = "1.18.1", features = ["v4"] }
jwt = "0.16.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = "1.0.228"
axum-jwt-auth = "0.6.2"
csv = "1.4.0"
