[package]
name = "highload"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "api"  
]
resolver = "2"

[dependencies]
anyhow = "1.0.101"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie", "query", "typed-header"] }
axum-jwt-auth = "0.6.2"
chrono = "0.4.42"
csv = "1.4.0"
dashmap = "6.1.0"
deadpool-postgres = "0.14.1"
dotenv = "0.14.1"
env_logger = "0.11.8"
exn = "0.3.0"
fred = { version = "10.1.0", features = ["serde-json"] }
futures-util = "0.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
jwt = "0.16.0"
log = "0.4.28"
mockall = "0.14.0"
openapi = { path = "api" }
rand = "0.9.2"
rand_core = "0.9.3"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-uuid-1"] } 
uuid = { version = "1.18.1", features = ["v4", "v7"] }
